# backtester-rust

./: .gitignore  PLAN.md  check_output.txt  claude.md  index.html  package-lock.json  package.json  run_build.bat  run_check.bat  run_test.bat  tailwind.config.js  test_output.txt
.claude/: settings.local.json
MQL5_Indicators/: BT_ADX.mq5  BT_ATR.mq5  BT_Aroon.mq5  BT_AwesomeOscillator.mq5  BT_BarRange.mq5  BT_BearsPower.mq5  BT_BiggestRange.mq5  BT_BollingerBands.mq5  BT_BullsPower.mq5  BT_CCI.mq5  BT_DeMarker.mq5  BT_EMA.mq5  BT_Fibonacci.mq5  BT_Fractal.mq5  BT_GannHiLo.mq5  BT_HeikenAshi.mq5  BT_HighestInRange.mq5  BT_HullMA.mq5  BT_Ichimoku.mq5  BT_KeltnerChannel.mq5  BT_LaguerreRSI.mq5  BT_LinearRegression.mq5  BT_LowestInRange.mq5  BT_MACD.mq5  BT_Momentum.mq5  BT_ParabolicSAR.mq5  BT_Pivots.mq5  BT_ROC.mq5  BT_RSI.mq5  BT_Reflex.mq5  BT_SMA.mq5  BT_SmallestRange.mq5  BT_StdDev.mq5  (+7 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  errors.rs  lib.rs  license.rs  main.rs
src-tauri/src/data/: converter.rs  dukascopy.rs  loader.rs  mod.rs  storage.rs  validator.rs
src-tauri/src/engine/: builder.rs  executor.rs  indicators.rs  metrics.rs  mod.rs  monte_carlo.rs  optimizer.rs  orders.rs  position.rs  strategy.rs  streaming.rs  walk_forward.rs
src-tauri/src/engine/sr/: cmaes.rs  mod.rs  nsga2.rs  runner.rs  tree.rs
src-tauri/src/models/: builder.rs  candle.rs  config.rs  mod.rs  project.rs  result.rs  sr_result.rs  strategy.rs  symbol.rs  trade.rs
src-tauri/src/utils/: codegen.rs  export.rs  mod.rs
(+101 files in other folders)
